// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`5.35.0-006 should execute migration 1`] = `
Object {
  "GSI1_PK": "T#root#L#de-DE#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64240c276a2555000891814a#0001",
  "PK": "T#root#L#de-DE#CMS#CME#CME#64240c276a2555000891814a",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T10:00:07.197Z",
  "entity": "CmsEntries",
  "entryId": "64240c276a2555000891814a",
  "id": "64240c276a2555000891814a#0001",
  "locale": "de-DE",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:13.023Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 7",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T10:00:07.197Z",
      "id": "64240c276a2555000891814a#0001",
      "locked": false,
      "path": "/untitled-lftin0nw",
      "pid": "64240c276a2555000891814a",
      "savedOn": "2023-03-29T10:00:13.023Z",
      "status": "draft",
      "title": "Page 7",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 7",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 2`] = `
Object {
  "GSI1_PK": "T#root#L#de-DE#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64240c276a2555000891814a#0001",
  "PK": "T#root#L#de-DE#CMS#CME#CME#64240c276a2555000891814a",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T10:00:07.197Z",
  "entity": "CmsEntries",
  "entryId": "64240c276a2555000891814a",
  "id": "64240c276a2555000891814a#0001",
  "locale": "de-DE",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:13.023Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 7",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T10:00:07.197Z",
      "id": "64240c276a2555000891814a#0001",
      "locked": false,
      "path": "/untitled-lftin0nw",
      "pid": "64240c276a2555000891814a",
      "savedOn": "2023-03-29T10:00:13.023Z",
      "status": "draft",
      "title": "Page 7",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 7",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 3`] = `
Object {
  "GSI1_PK": "T#root#L#de-DE#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64240c1e6a25550008918149#0001",
  "PK": "T#root#L#de-DE#CMS#CME#CME#64240c1e6a25550008918149",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:59:58.533Z",
  "entity": "CmsEntries",
  "entryId": "64240c1e6a25550008918149",
  "id": "64240c1e6a25550008918149#0001",
  "locale": "de-DE",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:03.640Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 6",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:59:58.533Z",
      "id": "64240c1e6a25550008918149#0001",
      "locked": false,
      "path": "/untitled-lftimtz9",
      "pid": "64240c1e6a25550008918149",
      "savedOn": "2023-03-29T10:00:03.640Z",
      "status": "draft",
      "title": "Page 6",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 6",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 4`] = `
Object {
  "GSI1_PK": "T#root#L#de-DE#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64240c1e6a25550008918149#0001",
  "PK": "T#root#L#de-DE#CMS#CME#CME#64240c1e6a25550008918149",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:59:58.533Z",
  "entity": "CmsEntries",
  "entryId": "64240c1e6a25550008918149",
  "id": "64240c1e6a25550008918149#0001",
  "locale": "de-DE",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:03.640Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 6",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:59:58.533Z",
      "id": "64240c1e6a25550008918149#0001",
      "locked": false,
      "path": "/untitled-lftimtz9",
      "pid": "64240c1e6a25550008918149",
      "savedOn": "2023-03-29T10:00:03.640Z",
      "status": "draft",
      "title": "Page 6",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 6",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 5`] = `
Object {
  "GSI1_PK": "T#otherTenant#L#de-DE#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64240c386a2555000891814c#0001",
  "PK": "T#otherTenant#L#de-DE#CMS#CME#CME#64240c386a2555000891814c",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T10:00:24.698Z",
  "entity": "CmsEntries",
  "entryId": "64240c386a2555000891814c",
  "id": "64240c386a2555000891814c#0001",
  "locale": "de-DE",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:29.817Z",
  "status": "draft",
  "tenant": "otherTenant",
  "values": Object {
    "content": "Page 9",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T10:00:24.698Z",
      "id": "64240c386a2555000891814c#0001",
      "locked": false,
      "path": "/untitled-lftine61",
      "pid": "64240c386a2555000891814c",
      "savedOn": "2023-03-29T10:00:29.817Z",
      "status": "draft",
      "title": "Page 9",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 9",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 6`] = `
Object {
  "GSI1_PK": "T#otherTenant#L#de-DE#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64240c386a2555000891814c#0001",
  "PK": "T#otherTenant#L#de-DE#CMS#CME#CME#64240c386a2555000891814c",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T10:00:24.698Z",
  "entity": "CmsEntries",
  "entryId": "64240c386a2555000891814c",
  "id": "64240c386a2555000891814c#0001",
  "locale": "de-DE",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:29.817Z",
  "status": "draft",
  "tenant": "otherTenant",
  "values": Object {
    "content": "Page 9",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T10:00:24.698Z",
      "id": "64240c386a2555000891814c#0001",
      "locked": false,
      "path": "/untitled-lftine61",
      "pid": "64240c386a2555000891814c",
      "savedOn": "2023-03-29T10:00:29.817Z",
      "status": "draft",
      "title": "Page 9",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 9",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 7`] = `
Object {
  "GSI1_PK": "T#otherTenant#L#fr-FR#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64240c416a2555000891814d#0001",
  "PK": "T#otherTenant#L#fr-FR#CMS#CME#CME#64240c416a2555000891814d",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T10:00:33.958Z",
  "entity": "CmsEntries",
  "entryId": "64240c416a2555000891814d",
  "id": "64240c416a2555000891814d#0001",
  "locale": "fr-FR",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:39.123Z",
  "status": "draft",
  "tenant": "otherTenant",
  "values": Object {
    "content": "Page 10",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T10:00:33.958Z",
      "id": "64240c416a2555000891814d#0001",
      "locked": false,
      "path": "/untitled-lftinlb9",
      "pid": "64240c416a2555000891814d",
      "savedOn": "2023-03-29T10:00:39.123Z",
      "status": "draft",
      "title": "Page 10",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 10",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 8`] = `
Object {
  "GSI1_PK": "T#otherTenant#L#fr-FR#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64240c416a2555000891814d#0001",
  "PK": "T#otherTenant#L#fr-FR#CMS#CME#CME#64240c416a2555000891814d",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T10:00:33.958Z",
  "entity": "CmsEntries",
  "entryId": "64240c416a2555000891814d",
  "id": "64240c416a2555000891814d#0001",
  "locale": "fr-FR",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:39.123Z",
  "status": "draft",
  "tenant": "otherTenant",
  "values": Object {
    "content": "Page 10",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T10:00:33.958Z",
      "id": "64240c416a2555000891814d#0001",
      "locked": false,
      "path": "/untitled-lftinlb9",
      "pid": "64240c416a2555000891814d",
      "savedOn": "2023-03-29T10:00:39.123Z",
      "status": "draft",
      "title": "Page 10",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 10",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 9`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64240c156a25550008918148#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64240c156a25550008918148",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:59:49.797Z",
  "entity": "CmsEntries",
  "entryId": "64240c156a25550008918148",
  "id": "64240c156a25550008918148#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T09:59:55.256Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 5",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:59:49.797Z",
      "id": "64240c156a25550008918148#0001",
      "locked": false,
      "path": "/untitled-lftimn8k",
      "pid": "64240c156a25550008918148",
      "savedOn": "2023-03-29T09:59:55.256Z",
      "status": "draft",
      "title": "Page 5",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 5",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 10`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64240c156a25550008918148#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64240c156a25550008918148",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:59:49.797Z",
  "entity": "CmsEntries",
  "entryId": "64240c156a25550008918148",
  "id": "64240c156a25550008918148#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T09:59:55.256Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 5",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:59:49.797Z",
      "id": "64240c156a25550008918148#0001",
      "locked": false,
      "path": "/untitled-lftimn8k",
      "pid": "64240c156a25550008918148",
      "savedOn": "2023-03-29T09:59:55.256Z",
      "status": "draft",
      "title": "Page 5",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 5",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 11`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64240c0d6a25550008918147#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64240c0d6a25550008918147",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:59:41.577Z",
  "entity": "CmsEntries",
  "entryId": "64240c0d6a25550008918147",
  "id": "64240c0d6a25550008918147#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T09:59:46.483Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 4",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:59:41.577Z",
      "id": "64240c0d6a25550008918147#0001",
      "locked": false,
      "path": "/untitled-lftimgw8",
      "pid": "64240c0d6a25550008918147",
      "savedOn": "2023-03-29T09:59:46.483Z",
      "status": "draft",
      "title": "Page 4",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 4",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 12`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64240c0d6a25550008918147#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64240c0d6a25550008918147",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:59:41.577Z",
  "entity": "CmsEntries",
  "entryId": "64240c0d6a25550008918147",
  "id": "64240c0d6a25550008918147#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T09:59:46.483Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 4",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:59:41.577Z",
      "id": "64240c0d6a25550008918147#0001",
      "locked": false,
      "path": "/untitled-lftimgw8",
      "pid": "64240c0d6a25550008918147",
      "savedOn": "2023-03-29T09:59:46.483Z",
      "status": "draft",
      "title": "Page 4",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 4",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 13`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64240c026a25550008918146#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64240c026a25550008918146",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:59:30.365Z",
  "entity": "CmsEntries",
  "entryId": "64240c026a25550008918146",
  "id": "64240c026a25550008918146#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T09:59:37.541Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 3",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:59:30.365Z",
      "id": "64240c026a25550008918146#0001",
      "locked": false,
      "path": "/untitled-lftim88r",
      "pid": "64240c026a25550008918146",
      "savedOn": "2023-03-29T09:59:37.541Z",
      "status": "draft",
      "title": "Page 3",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 3",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 14`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64240c026a25550008918146#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64240c026a25550008918146",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:59:30.365Z",
  "entity": "CmsEntries",
  "entryId": "64240c026a25550008918146",
  "id": "64240c026a25550008918146#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T09:59:37.541Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 3",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:59:30.365Z",
      "id": "64240c026a25550008918146#0001",
      "locked": false,
      "path": "/untitled-lftim88r",
      "pid": "64240c026a25550008918146",
      "savedOn": "2023-03-29T09:59:37.541Z",
      "status": "draft",
      "title": "Page 3",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 3",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 15`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64229f6fce15ca00086c890f#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64229f6fce15ca00086c890f",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-03-28T08:03:59.776Z",
  "entity": "CmsEntries",
  "entryId": "64229f6fce15ca00086c890f",
  "id": "64229f6fce15ca00086c890f#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-03-28T08:04:25.918Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 1 Page 1 title Suspendisse varius enim in eros elementum tristique.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-03-28T08:03:59.776Z",
      "id": "64229f6fce15ca00086c890f#0001",
      "locked": true,
      "path": "/untitled-lfrz1twf",
      "pid": "64229f6fce15ca00086c890f",
      "savedOn": "2023-03-28T08:04:25.918Z",
      "status": "published",
      "title": "Page 1",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 1",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "0.0.0",
}
`;

exports[`5.35.0-006 should execute migration 16`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64229f6fce15ca00086c890f#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64229f6fce15ca00086c890f",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-03-28T08:03:59.776Z",
  "entity": "CmsEntries",
  "entryId": "64229f6fce15ca00086c890f",
  "id": "64229f6fce15ca00086c890f#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-03-28T08:04:25.918Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 1 Page 1 title Suspendisse varius enim in eros elementum tristique.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-03-28T08:03:59.776Z",
      "id": "64229f6fce15ca00086c890f#0001",
      "locked": true,
      "path": "/untitled-lfrz1twf",
      "pid": "64229f6fce15ca00086c890f",
      "savedOn": "2023-03-28T08:04:25.918Z",
      "status": "published",
      "title": "Page 1",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 1",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "0.0.0",
}
`;

exports[`5.35.0-006 should execute migration 17`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64229f4fce15ca00086c890e#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64229f4fce15ca00086c890e",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-03-28T08:03:27.410Z",
  "entity": "CmsEntries",
  "entryId": "64229f4fce15ca00086c890e",
  "id": "64229f4fce15ca00086c890e#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-03-28T08:03:55.854Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Home Home title Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-03-28T08:03:27.410Z",
      "id": "64229f4fce15ca00086c890e#0001",
      "locked": true,
      "path": "/untitled-lfrz14x0",
      "pid": "64229f4fce15ca00086c890e",
      "savedOn": "2023-03-28T08:03:55.854Z",
      "status": "published",
      "title": "Home",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Home",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "0.0.0",
}
`;

exports[`5.35.0-006 should execute migration 18`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64229f4fce15ca00086c890e#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#64229f4fce15ca00086c890e",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-03-28T08:03:27.410Z",
  "entity": "CmsEntries",
  "entryId": "64229f4fce15ca00086c890e",
  "id": "64229f4fce15ca00086c890e#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-03-28T08:03:55.854Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Home Home title Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-03-28T08:03:27.410Z",
      "id": "64229f4fce15ca00086c890e#0001",
      "locked": true,
      "path": "/untitled-lfrz14x0",
      "pid": "64229f4fce15ca00086c890e",
      "savedOn": "2023-03-28T08:03:55.854Z",
      "status": "published",
      "title": "Home",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Home",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "0.0.0",
}
`;

exports[`5.35.0-006 should execute migration 19`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "642406c52a40e70008fee21d#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#642406c52a40e70008fee21d",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:52:22.978Z",
  "entity": "CmsEntries",
  "entryId": "642406c52a40e70008fee21d",
  "id": "642406c52a40e70008fee21d#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T09:52:46.033Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 2 Page 2 Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere. List item 1
                    List item 2
                    List item 3 Block Quote Cat roll Demo button",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:52:22.978Z",
      "id": "642406c52a40e70008fee21d#0002",
      "locked": false,
      "path": "/untitled-lfththow",
      "pid": "642406c52a40e70008fee21d",
      "savedOn": "2023-03-29T09:52:46.033Z",
      "status": "draft",
      "title": "Page 2",
      "version": 2,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 2",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 20`] = `
Object {
  "GSI1_PK": "T#root#L#en-US#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "642406c52a40e70008fee21d#0001",
  "PK": "T#root#L#en-US#CMS#CME#CME#642406c52a40e70008fee21d",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T09:52:22.978Z",
  "entity": "CmsEntries",
  "entryId": "642406c52a40e70008fee21d",
  "id": "642406c52a40e70008fee21d#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T09:52:46.033Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 2 Page 2 Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere. List item 1
                    List item 2
                    List item 3 Block Quote Cat roll Demo button",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T09:52:22.978Z",
      "id": "642406c52a40e70008fee21d#0002",
      "locked": false,
      "path": "/untitled-lfththow",
      "pid": "642406c52a40e70008fee21d",
      "savedOn": "2023-03-29T09:52:46.033Z",
      "status": "draft",
      "title": "Page 2",
      "version": 2,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 2",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 21`] = `
Object {
  "GSI1_PK": "T#root#L#fr-FR#CMS#CME#M#acoSearchRecord#L",
  "GSI1_SK": "64240c306a2555000891814b#0001",
  "PK": "T#root#L#fr-FR#CMS#CME#CME#64240c306a2555000891814b",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T10:00:16.142Z",
  "entity": "CmsEntries",
  "entryId": "64240c306a2555000891814b",
  "id": "64240c306a2555000891814b#0001",
  "locale": "fr-FR",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:21.181Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 8",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T10:00:16.142Z",
      "id": "64240c306a2555000891814b#0001",
      "locked": false,
      "path": "/untitled-lftin7kd",
      "pid": "64240c306a2555000891814b",
      "savedOn": "2023-03-29T10:00:21.181Z",
      "status": "draft",
      "title": "Page 8",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 8",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;

exports[`5.35.0-006 should execute migration 22`] = `
Object {
  "GSI1_PK": "T#root#L#fr-FR#CMS#CME#M#acoSearchRecord#A",
  "GSI1_SK": "64240c306a2555000891814b#0001",
  "PK": "T#root#L#fr-FR#CMS#CME#CME#64240c306a2555000891814b",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "createdOn": "2023-03-29T10:00:16.142Z",
  "entity": "CmsEntries",
  "entryId": "64240c306a2555000891814b",
  "id": "64240c306a2555000891814b#0001",
  "locale": "fr-FR",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Leonardo Giacone",
    "id": "172d2b80-d554-439e-ad68-445b1486e60a",
    "type": "admin",
  },
  "savedOn": "2023-03-29T10:00:21.181Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 8",
    "data": Object {
      "createdBy": Object {
        "displayName": "Leonardo Giacone",
        "id": "172d2b80-d554-439e-ad68-445b1486e60a",
        "type": "admin",
      },
      "createdOn": "2023-03-29T10:00:16.142Z",
      "id": "64240c306a2555000891814b#0001",
      "locked": false,
      "path": "/untitled-lftin7kd",
      "pid": "64240c306a2555000891814b",
      "savedOn": "2023-03-29T10:00:21.181Z",
      "status": "draft",
      "title": "Page 8",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 8",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": "5.34.7",
}
`;
